[project]
name = "perseus"
version = "0.1.0"
description = "An app management backend"
authors = [
    {name = "Gagan Malvi"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "configparser (>=7.2.0,<8.0.0)",
    "pyftpdlib (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "perseus"
version = "0.1.0"
description = "An app management backend"
authors = ["Gagan Malvi"]
license = "Apache-2.0"